# chatapp

./: .gitignore
.github/workflows/: rust.yml
chatapp_backend/: .env  Cargo.toml
chatapp_backend/migrations/: 20240613015058_init.up.sql
chatapp_backend/src/: main.rs
chatapp_backend/src/api/: mod.rs  router.rs
chatapp_backend/src/application/: handler.rs  jwt_auth.rs  mod.rs  room_handler.rs
chatapp_backend/src/domain/models/: chat_model.rs  mod.rs  responses.rs  user.rs  user_model.rs
chatapp_frontend/: package-lock.json  package.json
