[package]
name = "chatapp_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "uuid"]}
tokio = {version = "1.38.0", features = ["full"]}
tower-http = {version = "0.5.2", features = ["cors"]}
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"]}
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"]}
