[package]
name = "chatapp_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"]}
time = "0.3.36"
tokio = {version = "1.38.0", features = ["full"]}
tower-http = {version = "0.5.2", features = ["cors"]}
uuid = { version = "1.8.0", features = ["serde", "v4"] }
